Recycler view Jugadors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@
     <string name="veure">VEURE</string>
     <string name="nom_equip">Nom equip</string>
     <string name="_555">555</string>
+    <string name="nom_jugador">Nom Jugador</string>
 
 </resources>
