--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -44,4 +44,28 @@
     <string name="veure">See</string>
     <string name="nom_equip">Team name</string>
     <string name="nom_jugador">Player Name</string>
+    <string name="correu_error">The email and/or password is incorrect</string>
+    <string name="canviar_contrasenya_alert">An email has been sent to change the password</string>
+    <string name="canviar_contrasenya_error">The mail could not be sent</string>
+    <string name="introduir_correu_alert">You have to enter an email</string>
+    <string name="introduir_contrasenya_alert">You have to enter a password</string>
+    <string name="introduir_contrasenya_repetida_alert">" Repeated password must be entered"</string>
+    <string name="introduir_contrasenya_repetida_correcte_alert">The correct password must be entered</string>
+    <string name="lequip_no_existeix_alert">" The team does not exist"</string>
+    <string name="cal_introduir_equip">" You must enter a name to the team"</string>
+    <string name="equip_ja_esta_creat_alert">" The team has not been added because it is already created"</string>
+    <string name="lequip_sha_creat_alert">The team has been added successfully</string>
+    <string name="lequip_no_sha_afegit_alert">The team has not been added</string>
+    <string name="cal_introduir_nom_al_jugador_alert">You must enter a name to the player</string>
+    <string name="cal_introduir_nom_al_equip_alert">" You must enter a name for team"</string>
+    <string name="crear_jugador_alert">" The player has been created successfully"</string>
+    <string name="introduir_jugador_alert">" You must enter a name to the player"</string>
+    <string name="introduir_nom_equip_alert">" You must enter a name for the team"</string>
+    <string name="eliminar_jugador_alert">The player has been removed successfully</string>
+    <string name="jugador_no_existeix_alert">" The player with this name does not exist"</string>
+    <string name="equip_no_existeix_alert">The team does not exist</string>
+    <string name="introduir_nom_equip">You must enter a name to the team</string>
+    <string name="equip_eliminat_alert">The team has been deleted successfully</string>
+    <string name="introduir_puntuacio_alert">" You must enter a score"</string>
+    <string name="la_puntuacio_sha_modificat_alert">Score has been changed successfully</string>
 </resources>
