--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -44,4 +44,28 @@
     <string name="veure">VER</string>
     <string name="nom_equip">Nombre equipo</string>
     <string name="nom_jugador">Nombre Jugador</string>
+    <string name="correu_error">"El correo y/o la contraseña es incorrecto "</string>
+    <string name="canviar_contrasenya_alert">Se ha  mandado un correo para cambiar la contraseña</string>
+    <string name="canviar_contrasenya_error">No se ha podido mandar el correo</string>
+    <string name="introduir_correu_alert">Se tiene que introducir un correo</string>
+    <string name="introduir_contrasenya_alert">Se tiene que introducir una contraseña</string>
+    <string name="introduir_contrasenya_repetida_alert">Se  debe introducir la contraseña repetida</string>
+    <string name="introduir_contrasenya_repetida_correcte_alert">Se debe introducir la contraseña correcta</string>
+    <string name="lequip_no_existeix_alert">El equipo no existe</string>
+    <string name="cal_introduir_equip">Se debe introducir un nombre al equipo</string>
+    <string name="equip_ja_esta_creat_alert">"El equipo no se ha añadido porque ya está creado "</string>
+    <string name="lequip_sha_creat_alert">El equipo se ha añadido correctamente</string>
+    <string name="lequip_no_sha_afegit_alert">"El equipo no se ha añadido "</string>
+    <string name="cal_introduir_nom_al_jugador_alert">Se debe introducir un nombre al jugador</string>
+    <string name="cal_introduir_nom_al_equip_alert">Se debe introducir un nombre por equipo</string>
+    <string name="crear_jugador_alert">El jugador se ha creado correctamente</string>
+    <string name="introduir_jugador_alert">Se debe introducir un nombre al jugador</string>
+    <string name="introduir_nom_equip_alert">Se debe introducir un nombre para el equipo</string>
+    <string name="eliminar_jugador_alert">El jugador se ha eliminado correctamente</string>
+    <string name="jugador_no_existeix_alert">El jugador con este nombre no existe</string>
+    <string name="equip_no_existeix_alert">El equipo no existe</string>
+    <string name="introduir_nom_equip">Se debe introducir un nombre al equipo</string>
+    <string name="equip_eliminat_alert">El equipo se ha eliminado correctamente</string>
+    <string name="introduir_puntuacio_alert">Se debe introducir una puntuación</string>
+    <string name="la_puntuacio_sha_modificat_alert">La puntuación se ha modificado correctamente</string>
 </resources>
