--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -68,4 +68,7 @@
     <string name="equip_eliminat_alert">The team has been deleted successfully</string>
     <string name="introduir_puntuacio_alert">" You must enter a score"</string>
     <string name="la_puntuacio_sha_modificat_alert">Score has been changed successfully</string>
+    <string name="lupa_per_buscar">" magnifying glass to search"</string>
+    <string name="s_una_imatge_on_surt_una_silueta_de_persona">It is an image where a person\'s silhouette appears</string>
+    <string name="surt_un_lle_que_s_el_logotip_de_l_aplicaci">A lion appears, which is the logo of the application</string>
 </resources>
