--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -68,4 +68,7 @@
     <string name="equip_eliminat_alert">El equipo se ha eliminado correctamente</string>
     <string name="introduir_puntuacio_alert">Se debe introducir una puntuación</string>
     <string name="la_puntuacio_sha_modificat_alert">La puntuación se ha modificado correctamente</string>
+    <string name="lupa_per_buscar">lupa para buscar</string>
+    <string name="s_una_imatge_on_surt_una_silueta_de_persona">Es una imagen donde sale una silueta de persona</string>
+    <string name="surt_un_lle_que_s_el_logotip_de_l_aplicaci">Sale un león que es el logotipo de la aplicación</string>
 </resources>
