--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,8 @@
     <string name="equip_eliminat_alert">L\'equip s\'ha eliminat correctament</string>
     <string name="introduir_puntuacio_alert">Cal introduïr una puntuacio</string>
     <string name="la_puntuacio_sha_modificat_alert">La puntuacio s\'ha modificat correctament</string>
+    <string name="lupa_per_buscar">lupa per buscar</string>
+    <string name="s_una_imatge_on_surt_una_silueta_de_persona">És una imatge on surt una silueta de persona</string>
+    <string name="surt_un_lle_que_s_el_logotip_de_l_aplicaci">surt un lleó que és el logotip de l\'aplicació</string>
 
 </resources>
