--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -71,4 +71,5 @@
     <string name="lupa_per_buscar">lupa para buscar</string>
     <string name="s_una_imatge_on_surt_una_silueta_de_persona">Es una imagen donde sale una silueta de persona</string>
     <string name="surt_un_lle_que_s_el_logotip_de_l_aplicaci">Sale un león que es el logotipo de la aplicación</string>
+    <string name="fotoguardadaalert">La imagen se ha guardado</string>
 </resources>
