--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,7 @@
     <string name="equipnom" translatable="false">Equip</string>
     <string name="_0" translatable="false">0</string>
     <string name="jugador_no_afegit_alert">El jugador no s\'ha afegit perquè ja esta creat</string>
+    <string name="gestionar_jugadors">GESTIONAR JUGADORS</string>
+    <string name="gestionar_equips">GESTIONAR EQUIPS</string>
 
 </resources>
