--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -9,7 +9,7 @@
     <string name="recuperar">RECUPERAR</string>
     <string name="introdueix_email">introduce _email</string>
     <string name="cancelar">CANCELAR</string>
-    <string name="confirmar">COMFIRMAR</string>
+    <string name="confirmar">CONFIRMAR</string>
     <string name="contrasenya">Contraseña</string>
     <string name="nom_usuari">Nombre Usuario</string>
     <string name="repetir_contrasenya">Repetir Contraseña</string>
